--- a/shirt.html
+++ b/shirt.html
@@ -14,7 +14,7 @@
 <tr>
 <td rowspan="2" valign="top">101</td>
 <td align="center">computer</td>
-<td rowspan="3"valign=bottom>accessories, shoe, asdhfkjasshdf</td>
+<td rowspan="3"valign=bottom>accessories</td>
 </tr>
 <tr>
     <td>printer</td>
